--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,3 +5,32 @@
 .error {
 	color: red;
 }
+
+/* Sticky footer styles below, modified from 
+http://getbootstrap.com/examples/sticky-footer/sticky-footer.css
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background-color: #f5f5f5;
+}
+footer .container {
+  width: auto;
+  /* max-width: 680px; */
+  padding: 0 15px;
+}
+footer .container .text-muted {
+  margin: 10px 0;
+  font-size: small;
+}
+footer .container .text-muted a {
+  color: #999999;
+  text-decoration: underline;
+}
